<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateAccountActivity">

    <include layout="@layout/actionbar_toolbar" />

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_create_Account"
                android:textColor="@color/editTextColorBlack"
                android:textColorHint="@color/editTextColorBlack"
                app:boxStrokeColor="@color/editTextColorBlack">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_dni"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_create_Account"
                android:textColor="@color/editTextColorBlack"
                android:textColorHint="@color/editTextColorBlack"
                app:boxStrokeColor="@color/editTextColorBlack">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_create_Account"
                android:textColor="@color/editTextColorBlack"
                android:textColorHint="@color/editTextColorBlack"
                app:boxStrokeColor="@color/editTextColorBlack">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_telefono"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_create_Account"
                android:textColor="@color/editTextColorBlack"
                android:textColorHint="@color/editTextColorBlack"
                app:boxStrokeColor="@color/editTextColorBlack">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_create_Account"
                android:textColor="@color/editTextColorBlack"
                android:textColorHint="@color/editTextColorBlack"
                app:boxStrokeColor="@color/editTextColorBlack">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_create_Account"
                android:textColor="@color/editTextColorBlack"
                android:textColorHint="@color/editTextColorBlack"
                app:boxStrokeColor="@color/editTextColorBlack">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirPassword"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>












            <Button

                android:id="@+id/loginUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_btnCreateAccount"
                android:onClick="onClick"
                android:theme="@style/RaisedButtonDark" />

        </LinearLayout>


    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>